# capstone_project

./: .gitignore  README.md
adjusted_odometry_publisher/: CMakeLists.txt  package.xml
adjusted_odometry_publisher/src/: correct.cpp
collision_data/min_max/: testing.csv  training.csv  validation.csv
collision_data/raw/: all.csv  testing.csv  training.csv  validation.csv
collision_data/z/: testing.csv  training.csv  validation.csv
data_collector/: CMakeLists.txt  collision_data.csv  package.xml
data_collector/src/: collect.cpp
data_processing/: normalize.py  pca.py  split.py
networks/1/min_max/: net.pt  pca15net.pt  pca20net.pt  pca5net.pt
networks/1/raw/: net.pt  pca10net.pt  pca20net.pt  pca5net.pt
networks/1/z/: net.pt  pca10net.pt  pca15net.pt  pca20net.pt  pca5net.pt
networks/2/min_max/: net.pt  (+4 more)
networks/min_max/: pca10net.pt
networks/optimized/: A.pt  B.pt  C.pt  MAE.pt
networks/raw/: net.pt  pca15net.pt
networks/temp/: net.pt
neural_network/: CMakeLists.txt  collision_network_builder.cpp  collision_network_builder2.cpp  collision_network_optimizer.cpp
output_data/loss_comparisons/: loss.csv  lrelu_loss.csv  mae_loss.csv  sgdm_loss.csv
output_data/min_max/: output.csv  pca15output.csv  pca20output.csv
output_data/optimized/: A.csv  B.csv  C.csv  MAE.csv
output_data/raw/: output.csv
output_data/z/: pca10output.csv  pca5output.csv
robot_driver/: CMakeLists.txt  package.xml
robot_driver/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
robot_driver/log/: latest_build
robot_driver/src/: drive.cpp
(+72 files in other folders)
